--- a/src/users/user-edit/UserEdit.css
+++ b/src/users/user-edit/UserEdit.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     margin: 20px;
-    border: solid grey 1px;
+    border: solid rgb(160, 160, 160) 1px;
     height: 600px;
 }
 
@@ -33,7 +33,7 @@
     height: 20px;
     font-weight: bold;
     font-size: larger;
-    border-bottom: solid 1px grey;
+    border-bottom: solid 1px rgb(160, 160, 160);
     padding: 15px 15px 15px 35px;
 }
 
@@ -46,6 +46,7 @@
 
 .form-label {
     min-width: 120px;
+    color: rgb(160, 160, 160);
 }
 
 .form-input {
